--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "dotenv": "^16.4.5",
     "inquirer": "^9.2.17",
     "mysql2": "^3.9.3",
-    "sequelize": "^6.37.2"
+    "sequelize": "^6.36.0"
+  },
+  "scripts": {
+    "seed": "node seeds/seed.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
