--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "scripts": {
     "seed": "node seeds/seed.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "esm": "^3.2.25"
   }
 }
